--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -199,6 +199,12 @@ On the TK there are twelve different shapes for any given scale, but how many sh
     </div>
   </div>
 
+  <div class="cell large-3"></div>
+  <div class="cell large-6">
+    <img src="/images/legend.png" alt="Legend for intervals-shapes graph" />
+  </div>
+  <div class="cell large-3"></div>
+
   <h2>LIK</h2>
   <div class="intervals-shapes-graph intervals-shapes-graph--lik">
     <div class="nodes intervals">
