Add assets, and add image for shape vs fingering.

--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -388,7 +388,18 @@ I believe that isomorphic keyboard have advantages with transposing, recognizing
 
 2. There are competing definitions of isomorphism, and according to some the LIK isn&#39;t truly isomorphic. [Wikipedia&#39;s definition ](https://en.wikipedia.org/wiki/Isomorphic_keyboard), which I assume uses [this article](https://www.mitpressjournals.org/doi/pdf/10.1162/comj.2007.31.4.15) as a source asserts that isomorphic keyboards must be tuning invariant, which the LIK is not (the LIK is only isomorphic for equal tone temperaments). I intend on exploring this more fully in the future.
 
-3. Geometry or shape, when applied to keyboards describes the shape made by the physical location of the keys. Fingering describes which fingers hit which notes. There is correlation between the two; generally one shape will be fingered one way. However, this is not always true. You can play the first five notes of the C major scale with all five fingers (1-2-3-4-5) but if you were had to complete the scale, you would finger the same shape as (1-2-3-1-2) so that you could finish the scale with 3-4-5. **show image demonstrating this here**. Realistically, change in fingerings for a particular shape are dependent on what has been played prior or what needs to be played immediately after.
+3. Geometry or shape, when applied to keyboards describes the shape made by the physical location of the keys. Fingering describes how and with what fingers this shape is played. In this example, the shape of the notes is the same, the first five notes of the major scale. The typical fingering is to play this with all five fingers 1-2-3-4-5.
+<div>
+  <img src="/images/first-fingering.svg" style="width: 50%; margin: 0 0 2rem;" />
+</div>
+
+But if you wanted to complete the major scale, you would finger the same shape as 1-2-3-1-2, so that you could finish the scale with 3-4-5.
+
+<div>
+  <img src="/images/second-fingering.svg" style="margin: 0 0 2rem;"/>
+</div>
+
+The shape is the same, but the fingering is different.
 
 </div>
 </div>
