Add images for the other-isomorphic-keyboards articles. Rewrite a paragraph in the article.

--- a/source/articles/other-isomorphic-keyboards.html.md.erb
+++ b/source/articles/other-isomorphic-keyboards.html.md.erb
@@ -48,24 +48,22 @@ scale played with the right hand, with the fingers numbered as such: 1
 -- thumb, 2 -- index, 3 -- middle, 4 -- ring, 5 -- pinkie. This is the
 most common fingering, shared between six of the twelve major scales.
 
-##Traditional keyboard image
-[http://www.piano-lessons-made-simple.com/images/C-Major-Scale-Fingering-Right-Hand.gif](http://www.piano-lessons-made-simple.com/images/C-Major-Scale-Fingering-Right-Hand.gif)
 
-Traditional keyboard: 1-2-3-1-2-3-4-5.
+**Traditional keyboard**: 1-2-3-1-2-3-4-5.
 
-**LIK image**
+<img src="/images/tk-c-major.svg" />
 
-LIK: 1-2-3-1-2-3-4-5
+**LIK**: 1-2-3-1-2-3-4-5
 
-**Wiki-Hayden image**
-[https://en.wikipedia.org/wiki/Wicki-Hayden\_note\_layout\#/media/File:Wicki-Hayden\_Musical\_Note\_Layout.png](https://en.wikipedia.org/wiki/Wicki-Hayden_note_layout#/media/File:Wicki-Hayden_Musical_Note_Layout.png)
+<img src="/images/lik-c-major.svg" />
 
-Wiki-Hayden: 1-2-3-(shift hand forward)-1-2-3-4-(shift hand forward)-1
+**Wiki-Hayden**: 1-2-3-(shift hand forward)-1-2-3-4-(shift hand forward)-1
 
-**Janko image**
-[https://en.wikipedia.org/wiki/Jank%C3%B3\_keyboard\#/media/File:Janko\_keyboard.svg](https://en.wikipedia.org/wiki/Jank%C3%B3_keyboard#/media/File:Janko_keyboard.svg)
+<img src="/images/wiki-hayden-c-major.svg" />
 
-Janko: 1-2-3-(shift hand back)-1-2-3-4-(shift hand forward)-1
+**Janko**: 1-2-3-(shift hand back)-1-2-3-4-(shift hand forward)-1
+
+<img src="/images/janko-c-major.svg" />
 
 The LIK and the traditional keyboard share nearly identical shapes and
 identical fingerings, while the other isomorphic keyboards require the
@@ -87,14 +85,13 @@ is an awesome project. But for the rest of us, the process of making an
 LIK is much more appealing, because instead of creating the keyboard
 from scratch, you buy a keyboard, open it up, and replace the keys.
 
-Okay it isn't *that* simple. Someone has to create the keys, and mass producing keys that can be made with injection molding has proven to be difficult/expensive. I'm working on this, and if the LIK proves to be an improvement then I'll be working a lot more.
+Okay it isn't *that* simple. Someone has to create the keys, and mass producing keys be difficult/expensive. I made mine by buying replacement black keys ($25 + shipping), and then 3D printing extensions for the black keys ($360). It ends up being expensive and time intensive to improve a $100 keyboard. I have some ideas for making the LIK more accessible but initially I'm going to focus on the experiment itself. If the LIK proves to be an improvement then I'll be focusing more on making it accessible to the public.
 
 The LIK also will be easy for manufacturers to make. They could create
 the new key (by altering the model of their black keys to have the
 length of the white keys), and apply those keys to an existing keyboard.
 Creating a new product is never a small undertaking, but the
-infrastructure the LIK shares with the traditional keyboard makes
-production that much easier.
+infrastructure the LIK shares with the traditional keyboard should make it easier to produce.
 
 ## Conclusion
 
