Add some spacing to articles. Edit styles to accommodate mobile better. Format hypotheses graph for mobile.

--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -4,7 +4,6 @@
   <div class="grid-x grid-padding-x">
     <div class="cell large-8 section section--top article-body" markdown="1">
 # The Hypotheses
-<br>
 
 I think that the linear isomorphic keyboard (LIK) will outperform the traditional keyboard (TK). I predict that I will improve faster on the LIK than on the traditional keyboard and that the LIK will not have significant technical limitations in comparison to the traditional keyboard. More specifically, I hypothesize that the LIK will outperform the TK on fundamentals, be slightly better at sight reading, and greatly outperform the TK when playing by ear.
 
@@ -30,58 +29,58 @@ On the TK there are twelve different shapes for any given scale, but how many sh
 
 </div>
 </div>
-<div class="grid-x grid-padding-x" style="font-size: 16px;">
-  <h2>TK</h2>
+<div class="grid-x grid-padding-x" style="font-size: 16px; min-width: 900px;">
+  <div class="cell small-12"><h2>TK</h2></div>
   <div class="intervals-shapes-graph intervals-shapes-graph--tk">
     <div class="nodes intervals">
-    <div class="node interval" id="rec0vNdSsnZkIcA4X" name="Minor 2nd">
-      <span class="label-temp">Minor 2nd</span>
-      <div class="node__visual" style="background-color: #cfdfff"></div>
-    </div>
-    <div class="node interval" id="recS58DmkLKu2grR9" name="Major 2nd">
-      <span class="label-temp">Major 2nd</span>
-      <div class="node__visual" style="background-color: #d0f0fd"></div>
-    </div>
-    <div class="node interval" id="recdeN9izKLz6FxLx" name="Minor 3rd">
-      <span class="label-temp">Minor 3rd</span>
-      <div class="node__visual" style="background-color: #c2f5e9"></div>
-    </div>
-    <div class="node interval" id="reckvpdIs6Xuq1HVj" name="Major 3rd">
-      <span class="label-temp">Major 3rd</span>
-      <div class="node__visual" style="background-color: #d1f7c4"></div>
-    </div>
-    <div class="node interval" id="recH91UnZq5M46BN2" name="Perfect 4th">
-      <span class="label-temp">Perfect 4th</span>
-      <div class="node__visual" style="background-color: #ffeab6"></div>
-    </div>
-    <div class="node interval" id="receqRQ6G8fmCtEVx" name="Tritone">
-      <span class="label-temp">Tritone</span>
-      <div class="node__visual" style="background-color: #fee2d5"></div>
-    </div>
-    <div class="node interval" id="recZbKFnM0QfVkOmm" name="Perfect 5th">
-      <span class="label-temp">Perfect 5th</span>
-      <div class="node__visual" style="background-color: #ffdce5"></div>
-    </div>
-    <div class="node interval" id="recyMPEnGXy97mxll" name="Minor 6th">
-      <span class="label-temp">Minor 6th</span>
-      <div class="node__visual" style="background-color: #ffdaf6"></div>
-    </div>
-    <div class="node interval" id="recLsI9cI3dAimpvR" name="Major 6th">
-      <span class="label-temp">Major 6th</span>
-      <div class="node__visual" style="background-color: #ede2fe"></div>
-    </div>
-    <div class="node interval" id="reczsYyfXWbFv1v1d" name="Minor 7th">
-      <span class="label-temp">Minor 7th</span>
-      <div class="node__visual" style="background-color: #9cc7ff"></div>
-    </div>
-    <div class="node interval" id="recyyC3ERyaf28Xn6" name="Major 7th">
-      <span class="label-temp">Major 7th</span>
-      <div class="node__visual" style="background-color: #77d1f3"></div>
-    </div>
-    <div class="node interval" id="rec8sFmzq4bUF9g3D" name="Octave">
-      <span class="label-temp">Octave</span>
-      <div class="node__visual" style="background-color: #72ddc3"></div>
-    </div>
+      <div class="node interval" id="rec0vNdSsnZkIcA4X" name="Minor 2nd">
+        <span class="label-temp">Minor 2nd</span>
+        <div class="node__visual" style="background-color: #cfdfff"></div>
+      </div>
+      <div class="node interval" id="recS58DmkLKu2grR9" name="Major 2nd">
+        <span class="label-temp">Major 2nd</span>
+        <div class="node__visual" style="background-color: #d0f0fd"></div>
+      </div>
+      <div class="node interval" id="recdeN9izKLz6FxLx" name="Minor 3rd">
+        <span class="label-temp">Minor 3rd</span>
+        <div class="node__visual" style="background-color: #c2f5e9"></div>
+      </div>
+      <div class="node interval" id="reckvpdIs6Xuq1HVj" name="Major 3rd">
+        <span class="label-temp">Major 3rd</span>
+        <div class="node__visual" style="background-color: #d1f7c4"></div>
+      </div>
+      <div class="node interval" id="recH91UnZq5M46BN2" name="Perfect 4th">
+        <span class="label-temp">Perfect 4th</span>
+        <div class="node__visual" style="background-color: #ffeab6"></div>
+      </div>
+      <div class="node interval" id="receqRQ6G8fmCtEVx" name="Tritone">
+        <span class="label-temp">Tritone</span>
+        <div class="node__visual" style="background-color: #fee2d5"></div>
+      </div>
+      <div class="node interval" id="recZbKFnM0QfVkOmm" name="Perfect 5th">
+        <span class="label-temp">Perfect 5th</span>
+        <div class="node__visual" style="background-color: #ffdce5"></div>
+      </div>
+      <div class="node interval" id="recyMPEnGXy97mxll" name="Minor 6th">
+        <span class="label-temp">Minor 6th</span>
+        <div class="node__visual" style="background-color: #ffdaf6"></div>
+      </div>
+      <div class="node interval" id="recLsI9cI3dAimpvR" name="Major 6th">
+        <span class="label-temp">Major 6th</span>
+        <div class="node__visual" style="background-color: #ede2fe"></div>
+      </div>
+      <div class="node interval" id="reczsYyfXWbFv1v1d" name="Minor 7th">
+        <span class="label-temp">Minor 7th</span>
+        <div class="node__visual" style="background-color: #9cc7ff"></div>
+      </div>
+      <div class="node interval" id="recyyC3ERyaf28Xn6" name="Major 7th">
+        <span class="label-temp">Major 7th</span>
+        <div class="node__visual" style="background-color: #77d1f3"></div>
+      </div>
+      <div class="node interval" id="rec8sFmzq4bUF9g3D" name="Octave">
+        <span class="label-temp">Octave</span>
+        <div class="node__visual" style="background-color: #72ddc3"></div>
+      </div>
     </div>
     <div class="nodes shapes">
       <div class="node" id="recwYr1BR7SJOhV2K" name="WB1">
@@ -201,11 +200,11 @@ On the TK there are twelve different shapes for any given scale, but how many sh
 
   <div class="cell large-3"></div>
   <div class="cell large-6">
-    <img src="/images/legend.png" alt="Legend for intervals-shapes graph" />
+    <img src="/images/legend.png" alt="Legend for intervals-shapes graph" class="legend"/>
   </div>
   <div class="cell large-3"></div>
 
-  <h2>LIK</h2>
+  <div class="cell small-12"><h2>LIK</h2></div>
   <div class="intervals-shapes-graph intervals-shapes-graph--lik">
     <div class="nodes intervals">
       <div class="node interval" id="lik-minor-2nd" name="Minor 2nd">
@@ -318,8 +317,9 @@ These graphs illustrate two advantages of the LIK:
 1. There is only one interval for any given shape
 2. There is only one shape for any given interval
 
-### The Observational Advantage
-**Identifying intervals from shapes**
+
+
+### The Observational Advantage: identifying intervals from shapes
 
 The LIK makes it easier to identify intervals (and thus musical patterns) from shapes. Many shapes on the TK can make two different sounds (15/28 shapes within an octave), while on the LIK each shape only makes one sound, and there are fewer shapes to make (12 instead of 28 within an octave).
 
@@ -331,8 +331,7 @@ The impact of this advantage is not as clear cut as the others. It obviously hel
 
 Identifying intervals from shapes does seem like a potentially beneficial skill, but the more obvious advantage comes from its inverse idea, identifying shapes from intervals.
 
-### The rudimentary advantage
-**Identifying shapes from intervals**
+### The Rudimentary Advantage: identifying shapes from intervals
 
 The LIK makes it easier to identify shapes from musical patterns. The transpositional advantage and the rudimentary are similar in nature, but they have different points of origin.
 
