--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -30,6 +30,34 @@ title: The Linear Isomorphic Keybaord
   </div>
 
   <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
+
+  <div class="section">
+    <div class="summary-section">
+      <div><h2>Two keyboards</h2></div>
+      <div>
+        <img src="/images/mini-lik.svg" class="summary__keyboard" />
+        <img src="/images/mini-tk.svg" class="summary__keyboard" />
+      </div>
+    </div>
+    <div class="summary-section summary-section--right">
+      <div>
+        <h2>Recorded practicing the same content  for the same amount of time</h2>
+      </div>
+    </div>
+    <div class="summary-icons summary-icons--right" style="margin-top: 0">
+      <img src="/images/microphone.svg" class="summary__icon" />
+      <img src="/images/sheet-music.svg" class="summary__icon" />
+      <img src="/images/stopwatch.svg" class="summary__icon"/>
+    </div>
+    <div class="summary-section"><h2>Results are graphed, analyzed, and reflected upon.</h2></div>
+    <div class="summary-icons"> 
+      <img src="/images/bar-chart.svg" class="summary__icon"/>
+      <img src="/images/contract.svg" class="summary__icon"/>
+    </div>
+
+  </div>
+
+  <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
   
   <div class="section">
     <div class="grid-x grid-padding-x">
@@ -38,23 +66,15 @@ title: The Linear Isomorphic Keybaord
     <ul>
       <li class="article">
         <div><h3><a href="/articles/the-idea">The Idea</a></h3></div>
-        <div class="article-content">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in
-every key. The first key a new pianist will learn to play is the key of
-C major. It is wonderfully simple: just play the white notes. But...</div>
+        <div class="article-content">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major. It is wonderfully simple: just play the white notes. But...</div>
       </li>
       <li class="article">
         <div><h3><a href="/articles/the-hypotheses">The Hypotheses</a></h3></div>
-        <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the
-traditional keyboard (TK). I predict that I will improve faster on the
-LIK than on the traditional keyboard and that the LIK will not have
-significant technical limitations...</div>
+        <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the traditional keyboard (TK). I predict that I will improve faster on the LIK than on the traditional keyboard and that the LIK will not have significant technical limitations...</div>
       </li>
       <li class="article">
         <div><h3><a href="/articles/the-experiment">The Experiment</a></h3></div>
-        <div class="article-content">I am conducting an experiment to determine whether or not the Linear
-Isomorphic Keyboard is easier to play than the traditional piano
-keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the
-traditional keyboard (TK)... </div>
+        <div class="article-content">I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the traditional keyboard (TK)... </div>
       </li>
     </ul>
     <div class="section__footer">
@@ -63,7 +83,6 @@ traditional keyboard (TK)... </div>
   </div>
 
   <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
-
 
   <div class="section">
     <div class="grid-x grid-padding-x">
@@ -85,7 +104,10 @@ traditional keyboard (TK)... </div>
 </div>
 
 <footer class="footer">
-  <h4 class="footer__contact">Contact: linearisomorphickeyboard@gmail.com</h4>
+  <div>
+    <h4 class="footer__contact">Contact: linearisomorphickeyboard@gmail.com</h4>
+  </div>
+  <div class="footer__credits">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 </footer>
 
 <script>
