--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -58,6 +58,60 @@
   margin-bottom: 0;
 }
 
+.summary-section {
+  width: 70%;
+  margin-top: 5rem;
+  @media screen and (max-width: 640px) {
+    width: 100%;
+    text-align: center;
+  }
+}
+.summary-section--right {
+  display: flex;
+  margin-left: auto;
+  @media screen and (max-width: 640px) {
+    margin-left: none;
+    text-align: center;
+  }
+}
+.summary-icons {
+  margin: 1rem 0;
+  display: flex;
+  width: 70%;
+  @media screen and (max-width: 640px) {
+    width: 100%;
+    justify-content: space-evenly;
+  }
+}
+.summary-icons--right {
+  display: flex;
+  margin-left: auto;
+  @media screen and (max-width: 640px) {
+    margin-left: none;
+  }
+}
+
+
+.summary__keyboard {
+  width: 70%;
+  margin: 2rem 0;
+  @media screen and (max-width: 640px) {
+    width: 100%;
+    margin: 1rem 0;
+  }
+}
+.summary__icon {
+  height: 9rem; 
+  margin: 3rem;
+  @media screen and (max-width: 1020px) {
+    height: 7rem; 
+    margin: 3rem 1rem;
+  }
+  @media screen and (max-width: 640px) {
+    height: 5rem;
+  }
+}
+
 .article {
   margin: 1.5rem 0;
 }
@@ -84,12 +138,15 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-direction: column;
 }
-
 .footer__contact {
   margin: 0 3rem;
   color: #fff;
   @media screen and (max-width: 640px) {
     font-size: 12px;
   }
+}
+.footer__credits {
+  font-size: 10px;
 }
