--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -111,14 +111,14 @@ title: The Linear Isomorphic Keybaord
 </footer>
 
 <script>
-  // var data = <%# progress_data.to_json %>
-  var data = {
-    labels: [1],
-    series: [
-      {name: "LIK", data: [59]},
-      {name: "TK", data: [0]},
-    ]
-  }
+  var data = <%= progress_data.to_json %>
+  // var data = {
+  //   labels: [1],
+  //   series: [
+  //     {name: "LIK", data: [59]},
+  //     {name: "TK", data: [0]},
+  //   ]
+  // }
   options = {
     plugins: [
       Chartist.plugins.ctAxisTitle({
