Add Brian's changes.

--- a/source/articles/the-idea.html.md.erb
+++ b/source/articles/the-idea.html.md.erb
@@ -90,9 +90,9 @@ study, but I think the findings will still provide valuable insight about the vi
 I have a couple goals in mind. First, I want to begin to fill the dearth
 of studies comparing efficacy of the isomorphic keyboard to the
 traditional keyboard. If I find the LIK to be superior to the
-traditional keyboard, my next goal would be to gain publicity,
+traditional keyboard, my next goals would be to gain publicity,
 facilitate adoption, and encourage further research. Ideally, this would
-incentivise companies with experience making musical keyboards to make
+incentivize companies with experience making musical keyboards to make
 LIKs so I don't have to 3D print keys for the rest of my life.
 
 If this is successful, we could collectively save the pianists around
