Complete recreation of the site from data files that are seeded from a airtable request.

--- a/source/progress/index.html.erb
+++ b/source/progress/index.html.erb
@@ -24,14 +24,14 @@
 </div>
 
 <script>
-  // var data = <%# progress_data.to_json %>
-  var data = {
-    labels: [1],
-    series: [
-      {name: "LIK", data: [59]},
-      {name: "TK", data: [0]},
-    ]
-  }
+  var data = <%= progress_data.to_json %>
+  // var data = {
+  //   labels: [1],
+  //   series: [
+  //     {name: "LIK", data: [59]},
+  //     {name: "TK", data: [0]},
+  //   ]
+  // }
   options = {
     plugins: [
       Chartist.plugins.ctAxisTitle({
