Only show whole numbers in graphs, show 'none' if there were no completed increments, show articles in reverse chronological order in index.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -120,6 +120,9 @@ title: The Linear Isomorphic Keybaord
   //   ]
   // }
   options = {
+    axisY: {
+      onlyInteger: true
+    },
     plugins: [
       Chartist.plugins.ctAxisTitle({
         axisX: {
