--- a/source/progress/index.html.erb
+++ b/source/progress/index.html.erb
@@ -33,6 +33,9 @@
   //   ]
   // }
   options = {
+    axisY: {
+      onlyInteger: true
+    },
     plugins: [
       Chartist.plugins.ctAxisTitle({
         axisX: {
