Add settings and grid css, apply new grid to index page.

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,4 +1,6 @@
-// @import "settings.scss";
+@import "settings.scss";
+@import "grid.scss";
+
 @import "foundation.css";
 @import "index.css.scss";
 @import "chartist.css.scss";
