--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,16 +18,36 @@ title: The Linear Isomorphic Keybaord
 </div>
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x section">
-    <div class="cell large-2"></div>
-    <div class="cell large-8 main-description">Is there a better way to design the keyboard?
+  <div class="grid section">
+    <div class="grid-lg-2"></div>
+    <div class="grid-lg-8 main-description">Is there a better way to design the keyboard?
       <br/>
       <br/>
       This is an experiment to determine if the <strong>Linear Isomorphic Keyboard</strong> is the answer.
       <div class=""></div>
     </div>
-    <div class="cell large-2"></div>
+    <div class="grid-lg-2"></div>
   </div>
+
+<!--   <div class="grid-container" style="height: 200px;">
+    <div class="grid-x grid-padding-x" style="height: 200px;">
+      <div class="cell small-1" style="border: 1px solid black; height: 200px;"></div>
+      <div class="cell small-1" style="border: 1px solid black; height: 200px;"></div>
+      <div class="cell small-2" style="border: 1px solid black; height: 200px;"></div>
+      <div class="cell small-2" style="border: 1px solid black; height: 200px;"></div>
+      <div class="cell small-3" style="border: 1px solid black; height: 200px;"></div>
+      <div class="cell small-3" style="border: 1px solid black; height: 200px;"></div>
+    </div>
+  </div>
+
+  <div class="grid" style="height: 200px;">
+    <div class="grid-lg-1" style="border: 1px solid blue;"></div>
+    <div class="grid-lg-1" style="border: 1px solid blue;"></div>
+    <div class="grid-lg-2" style="border: 1px solid blue;"></div>
+    <div class="grid-lg-2" style="border: 1px solid blue;"></div>
+    <div class="grid-lg-3" style="border: 1px solid blue;"></div>
+    <div class="grid-lg-3" style="border: 1px solid blue;"></div>
+  </div> -->
 
   <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
 
@@ -60,23 +80,27 @@ title: The Linear Isomorphic Keybaord
   <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
   
   <div class="section">
-    <div class="grid-x grid-padding-x">
-      <div class="cell large-12"><h1>Articles</h1></div>
+    <div class="grid">
+      <div class="grid-lg-12"><h1>Articles</h1></div>
+      <div class="grid-lg-1"></div>
+      <div class="grid-lg-10">
+        <ul>
+          <li class="article">
+            <div><h3><a href="/articles/the-idea">The Idea</a></h3></div>
+            <div class="article-content">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major. It is wonderfully simple: just play the white notes. But...</div>
+          </li>
+          <li class="article">
+            <div><h3><a href="/articles/the-hypotheses">The Hypotheses</a></h3></div>
+            <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the traditional keyboard (TK). I predict that I will improve faster on the LIK than on the traditional keyboard and that the LIK will not have significant technical limitations...</div>
+          </li>
+          <li class="article">
+            <div><h3><a href="/articles/the-experiment">The Experiment</a></h3></div>
+            <div class="article-content">I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the traditional keyboard (TK)... </div>
+          </li>
+        </ul>
+      </div>
+      <div class="grid-lg-1"></div>
     </div>
-    <ul>
-      <li class="article">
-        <div><h3><a href="/articles/the-idea">The Idea</a></h3></div>
-        <div class="article-content">There may be a better way to design the piano. It is known that to master an instrument you must learn to play it in every key. The first key a new pianist will learn to play is the key of C major. It is wonderfully simple: just play the white notes. But...</div>
-      </li>
-      <li class="article">
-        <div><h3><a href="/articles/the-hypotheses">The Hypotheses</a></h3></div>
-        <div class="article-content">I think that the linear isomorphic keyboard (LIK) will outperform the traditional keyboard (TK). I predict that I will improve faster on the LIK than on the traditional keyboard and that the LIK will not have significant technical limitations...</div>
-      </li>
-      <li class="article">
-        <div><h3><a href="/articles/the-experiment">The Experiment</a></h3></div>
-        <div class="article-content">I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard. In order to compare the Linear Isomorphic Keyboard (LIK) and the traditional keyboard (TK)... </div>
-      </li>
-    </ul>
     <div class="section__footer">
       <a href="/articles">More Articles...</a>
     </div>
@@ -85,16 +109,16 @@ title: The Linear Isomorphic Keybaord
   <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
 
   <div class="section">
-    <div class="grid-x grid-padding-x">
-      <div class="cell large-12"><h1>Progress</h1></div>
+    <div class="grid">
+      <div class="grid-lg-12"><h1>Progress</h1></div>
     </div>
 
-    <div class="grid-x grid-padding-x keyboard-progress">
-      <div class="cell large-2"></div>
-      <div class="cell large-8">
+    <div class="grid keyboard-progress">
+      <div class="grid-lg-2"></div>
+      <div class="grid-lg-8">
         <div class="ct-chart chart--medium"></div>
       </div>
-      <div class="cell large-2"></div>
+      <div class="grid-lg-2"></div>
     </div>
 
     <div class="section__footer">
