--- a/source/reflections/the-initial-assessment.html.md.erb
+++ b/source/reflections/the-initial-assessment.html.md.erb
@@ -1,6 +1,5 @@
-<div class="grid-container">
-<div class="grid-x grid-padding-x">
-<div class="cell large-8 section section--top" markdown="1">
+<div class="grid">
+<div class="grid-lg-8 section section--top" markdown="1">
 
 # Reflection: The Assessment
 
@@ -45,6 +44,5 @@ Despite the multitude of mistakes, the initial assessment provided what I wanted
 2. This meant that if I could play the C major scale at 60bpm, I would notate C major at 63 bpm (the next increment), rather than 60bpm (what I could actually play). I continued making this error in my assessment, keeping track of what I was going to practice rather than what I was able to do. This was fixed post-assessment. When inputting data, I didn&#39;t listen to what I said or notated and instead I listened through my assessments a second time through to determine what I was able to do.
 
 
-</div>
 </div>
 </div>
