--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -122,7 +122,8 @@
 
 // progress is used in foundation
 .keyboard-progress {
-  margin: 3rem 0;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
   height: 100%;
 }
 
