Partway through adding bootstrap css to index page.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,24 +10,21 @@ title: The Linear Isomorphic Keybaord
 
 
 <div class="hero">
-  <div class="hero__space"></div>
   <div class="hero__image">
     <%= image_tag "LIK-solo.png" %>
   </div>
   <h1 class="hero__text">The Linear Isomorphic Keyboard</h1>
 </div>
 
-<div class="grid-container">
-  <div class="grid section">
-    <div class="grid-lg-2"></div>
-    <div class="grid-lg-8 main-description">Is there a better way to design the keyboard?
+<div class="container section">
+  <div class="row justify-content-center">
+    <div class="col-8 main-description">Is there a better way to design the keyboard?
       <br/>
       <br/>
       This is an experiment to determine if the <strong>Linear Isomorphic Keyboard</strong> is the answer.
-      <div class=""></div>
     </div>
-    <div class="grid-lg-2"></div>
   </div>
+</div>
 
 <!--   <div class="grid-container" style="height: 200px;">
     <div class="grid-x grid-padding-x" style="height: 200px;">
@@ -48,10 +45,14 @@ title: The Linear Isomorphic Keybaord
     <div class="grid-lg-3" style="border: 1px solid blue;"></div>
     <div class="grid-lg-3" style="border: 1px solid blue;"></div>
   </div> -->
+  
+  <section class="container">
+    <hr class="hr-top"/><hr class="hr-bottom"/>
+  </section>
+  <br/>
+  <br/>
 
-  <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
-
-  <div class="section">
+  <div class="container section">
     <div class="summary-section">
       <div><h2>Two keyboards</h2></div>
       <div>
@@ -77,7 +78,7 @@ title: The Linear Isomorphic Keybaord
 
   </div>
 
-  <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
+  <hr class="hr-top"/><hr class="hr-bottom"/>
   
   <div class="section">
     <div class="grid">
@@ -106,7 +107,7 @@ title: The Linear Isomorphic Keybaord
     </div>
   </div>
 
-  <hr class="hr-top"/><hr class="hr-bottom projects-border"/>
+  <hr class="hr-top"/><hr class="hr-bottom"/>
 
   <div class="section">
     <div class="grid">
