--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -1,19 +1,16 @@
 .hero {
-  width: 100%;
+  // width: 100%;
   background-color: #848484;
-  position: relative;
+  // position: relative;
   // z-index: 5;
-}
-.hero__space {
-  height: 8rem;
 }
 .hero__image {
   margin: 0 auto;
   overflow: hidden;
   position: relative;
-  margin: 0 1rem;
+  padding: 8rem 1rem 0;
   @media screen and (min-width: 641px) {
-    margin: 0 8rem;
+    padding: 8rem 8rem 0;
   }
 }
 // .hero__image--inner {
@@ -25,6 +22,7 @@
 //   position: relative;
 //   left: -50%;
 // }
+
 .hero__text {
   display: flex;
   justify-content: center;
@@ -59,12 +57,12 @@
 }
 
 .summary-section {
-  width: 70%;
+  // width: 70%;
   margin-top: 5rem;
-  @media screen and (max-width: 640px) {
-    width: 100%;
-    text-align: center;
-  }
+  // @media screen and (max-width: 640px) {
+  //   width: 100%;
+  //   text-align: center;
+  // }
 }
 .summary-section--right {
   display: flex;
