Apply bootstrap grid/columns styling to all pages.

--- a/source/articles/the-experiment.html.md.erb
+++ b/source/articles/the-experiment.html.md.erb
@@ -1,6 +1,6 @@
-<div class="grid-container">
-  <div class="grid-x grid-padding-x">
-    <div class="cell large-8 section section--top article-body" markdown="1">
+<div class="container">
+  <div class="row">
+    <div class="col col-lg-8 section section--top article-body" markdown="1">
 # The Experiment
 
 I am conducting an experiment to determine whether or not the Linear Isomorphic Keyboard is easier to play than the traditional piano keyboard.
