--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -1,8 +1,8 @@
 <script src="https://unpkg.com/tippy.js@2/dist/tippy.all.min.js"></script>
 
-<div class="grid-container">
-  <div class="grid-x grid-padding-x">
-    <div class="cell large-8 section section--top article-body" markdown="1">
+<div class="container">
+  <div class="row">
+    <div class="col col-lg-8 section section--top article-body" markdown="1">
 # The Hypotheses
 
 I think that the linear isomorphic keyboard (LIK) will outperform the traditional keyboard (TK). I predict that I will improve faster on the LIK than on the traditional keyboard and that the LIK will not have significant technical limitations in comparison to the traditional keyboard. More specifically, I hypothesize that the LIK will outperform the TK on fundamentals, be slightly better at sight reading, and greatly outperform the TK when playing by ear.
@@ -29,8 +29,10 @@ On the TK there are twelve different shapes for any given scale, but how many sh
 
 </div>
 </div>
-<div class="grid-x grid-padding-x" style="font-size: 16px; min-width: 900px;">
-  <div class="cell small-12"><h2>TK</h2></div>
+</div>
+
+<div class="intervals-shapes-section">
+  <div class="intervals-shapes-graph__label"><h2>TK</h2></div>
   <div class="intervals-shapes-graph intervals-shapes-graph--tk">
     <div class="nodes intervals">
       <div class="node interval" id="rec0vNdSsnZkIcA4X" name="Minor 2nd">
@@ -197,14 +199,14 @@ On the TK there are twelve different shapes for any given scale, but how many sh
       </div>
     </div>
   </div>
-
-  <div class="cell large-3"></div>
-  <div class="cell large-6">
-    <img src="/images/legend.png" alt="Legend for intervals-shapes graph" class="legend"/>
+  
+  <div class="row justify-content-center">
+    <div class="col col-lg-6">
+      <img src="/images/legend.png" alt="Legend for intervals-shapes graph" class="legend"/>
+    </div>
   </div>
-  <div class="cell large-3"></div>
 
-  <div class="cell small-12"><h2>LIK</h2></div>
+  <div class="intervals-shapes-graph__label"><h2>LIK</h2></div>
   <div class="intervals-shapes-graph intervals-shapes-graph--lik">
     <div class="nodes intervals">
       <div class="node interval" id="lik-minor-2nd" name="Minor 2nd">
@@ -309,9 +311,10 @@ On the TK there are twelve different shapes for any given scale, but how many sh
     </div>
   </div>
 </div>
-<div class="grid-container">
-  <div class="grid-x grid-padding-x">
-    <div class="cell large-8 section section--top article-body" markdown="1">
+
+<div class="container">
+  <div class="row">
+    <div class="col col-lg-8 section article-body" markdown="1">
 These graphs illustrate two advantages of the LIK:
 
 1. There is only one interval for any given shape
