--- a/source/articles/the-idea.html.md.erb
+++ b/source/articles/the-idea.html.md.erb
@@ -1,10 +1,8 @@
-<div class="grid-container article-body">
-  <div class="grid-x grid-padding-x">
-    <div class="cell large-8 section section--top article-body" markdown="1">
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-lg-8 section section--top article-body" markdown="1">
 
 #The Idea
-
-<br>
 
 There may be a better way to design the piano.
 
@@ -45,10 +43,10 @@ We can do better. Make all keys equal, and in the process, make all keys
 the same.
 
 </div>
-<div class="cell large-12">
+<div class="col-12">
   <%= image_tag "LIK-solo.png" %>
 </div>
-<div class="cell large-8 section" markdown="1">
+<div class="col-12 col-lg-8 section" markdown="1">
 
 This is the Linear Isomorphic Keyboard.
 
