--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,4 +1,4 @@
-<nav class="navbar grid-container navbar--translucent">
+<nav class="navbar container navbar--translucent">
   <div class="navbar__logo "><a href="/"><%= svg "LIK-logo" %></a></div>
   <ul class="navbar__nav ">
     <li class="navbar__item">
