--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,7 +1,7 @@
 @import "settings.scss";
 @import "grid.scss";
 
-@import "foundation.css";
+// @import "foundation.css";
 @import "index.css.scss";
 @import "chartist.css.scss";
 @import "the-hypotheses.css.scss";
@@ -9,7 +9,9 @@
 
 body {
   font-family: 'Libre Baskerville', serif;
-
+  font-weight: normal;
+  line-height: 1.5;
+  margin: 0;
   // margin-top: 4rem;
 }
 
@@ -26,6 +28,7 @@ body {
   padding-bottom: 0.5rem;
   overflow: hidden;
   font-size: 1rem;
+  align-items: center;
 }
 
 .navbar--translucent {
@@ -68,6 +71,7 @@ ul {
 
 a {
   color: #000;
+  text-decoration: none;
 }
 
 a:hover {
