--- a/source/articles/other-isomorphic-keyboards.html.md.erb
+++ b/source/articles/other-isomorphic-keyboards.html.md.erb
@@ -1,6 +1,6 @@
-<div class="grid-container">
-  <div class="grid-x grid-padding-x">
-    <div class="cell large-8">
+<div class="container">
+  <div class="row">
+    <div class="col col-lg-8">
       <div class="section section--top article-body" markdown="1">
       
 # Other Isomorphic Keyboards
