Remove old css files.

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,5 +1,5 @@
-@import "settings.scss";
-@import "grid.scss";
+// @import "settings.scss";
+// @import "grid.scss";
 
 // @import "foundation.css";
 @import "index.css.scss";
