Refactor intervals-shapes js. Refactor the hypotheses html.

--- a/source/articles/the-hypotheses.html.md.erb
+++ b/source/articles/the-hypotheses.html.md.erb
@@ -200,9 +200,11 @@ On the TK there are twelve different shapes for any given scale, but how many sh
     </div>
   </div>
   
-  <div class="row justify-content-center">
-    <div class="col col-lg-6">
-      <img src="/images/legend.png" alt="Legend for intervals-shapes graph" class="legend"/>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col col-lg-6">
+        <img src="/images/legend.png" alt="Legend for intervals-shapes graph" class="legend"/>
+      </div>
     </div>
   </div>
 
