--- a/source/progress/index.html.erb
+++ b/source/progress/index.html.erb
@@ -6,17 +6,13 @@
 <script src="/javascripts/vendor/chartist-plugin-accessibility.min.js"></script>
 <script src="/javascripts/vendor/chartist-plugin-legend.js"></script>
 
-<div class="section--top">
-  <div class="grid">
-    <div class="grid-lg-12"><h1>Progress</h1></div>
-  </div>
+<div class="container section--top">
+  <div><h1>Progress</h1></div>
 
-  <div class="grid keyboard-progress">
-    <div class="grid-lg-2"></div>
-    <div class="grid-lg-8">
+  <div class="row justify-content-center keyboard-progress">
+    <div class="col col-8-lg">
       <div class="ct-chart chart--medium"></div>
     </div>
-    <div class="grid-lg-2"></div>
     <h3 class="progress-alert">More coming soon!</h3>
   </div>
 </div>
